--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Chicken</title>
 </head>
 <body>
-    <h1>World's best lasagna</h1>
+    <h1>Healthy stir fry</h1>
     <figure>
       <img src="assets/chicken.jpg" alt="">
-      <figcaption>Healthy lasagna recipe</figcaption>
+      <figcaption>Recipe you trust</figcaption>
     </figure>
     <h2>Ingredients</h2>
     <ul>
