--- a/recipes/ice_cream.html
+++ b/recipes/ice_cream.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Ice-cream</title>
 </head>
 <body>
-    <h1>World's best lasagna</h1>
+    <h1>Homemade ice-cream</h1>
     <figure>
       <img src="assets/ice-cream.jpg" alt="">
-      <figcaption>Easy lasagna recipe</figcaption>
+      <figcaption>Your summer wish</figcaption>
     </figure>
     <h2>Ingredients</h2>
     <ul>
@@ -20,7 +21,6 @@
        <li>1 scoop protein powder</li>
        <li>2 tablespoons peanut butter (Optional)</li>
        <li>2 tablespoons maple syrup (Optional)</li>
-       <li>Cheese</li>
     </ul>
     <h2>Steps</h2>
     <h3>Step 1</h3>
