--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Lasagna</title>
 </head>
 <body>
@@ -30,7 +31,6 @@
       <li>Layer the lasagna according to the recipe instructions.</li>
       <li>Cover with foil and bake.</li>
       <li>Let the lasagna rest before serving.</li>
-      <li></li>
     </ol>
 </body>
 </html>
